--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -9,6 +9,8 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!-- Import Font from Google -->
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
 
         <!-- Your existing CSS -->
         <link rel="stylesheet" type="text/css" href="/static/css/chat.css">
@@ -114,7 +116,7 @@
                 // Replace newline characters with <br> tags
                 const formattedMessage = message.replace(/\n/g, '<br>');
 
-                messageDiv.innerHTML = `<div class="profile-pic"></div><div>${sender}: ${formattedMessage}</div>`;
+                messageDiv.innerHTML = `<div class="profile-pic"></div><div><strong>${sender}:</strong> ${formattedMessage}</div>`;
                 chatContainer.appendChild(messageDiv);
                 chatContainer.scrollTop = chatContainer.scrollHeight;
             }
